# bumk-3

./: .gitignore
.github/workflows/: deploy-frontend-pages.yml
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/jobs/: news_scheduler.py
backend/app/models/: __init__.py
backend/app/routers/: complaints.py  excel.py  health.py  news.py  schedules.py  team_members.py
backend/app/schemas/: __init__.py
backend/app/services/: health_service.py  news_service.py  schedule_service.py  team_member_service.py
docs/: Architecture.md  Operation.md  PRD.md  index.html
frontend/: package.json
frontend/src/: App.tsx
frontend/src/api/: health.ts  news.ts  schedules.ts  teamMembers.ts
frontend/src/components/: HealthCheckPanel.tsx  PageSection.tsx
frontend/src/pages/: ComplaintChatbotPage.tsx  DashboardPage.tsx  ExcelAutomationPage.tsx  NewsPage.tsx  SchedulePage.tsx  SettingsPage.tsx
frontend/src/styles/: global.css
