[project]
name = "public-admin-superapp-backend"
version = "0.1.0"
description = "FastAPI backend scaffold for public-sector administrative super app"
requires-python = ">=3.14"
dependencies = [
  "apscheduler>=3.11.1",
  "beautifulsoup4>=4.14.3",
  "fastapi>=0.138.2",
  "requests>=2.32.5",
  "uvicorn>=0.49.0",
]

[tool.uv]
package = false
